[metadata]
name = distutils
author = Jason R. Coombs
author_email = jaraco@jaraco.com
description = Distribution utilities formerly from standard library
long_description = file:README.rst
url = https://github.com/pypa/distutils
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-cov
	# disabled
	#pytest-mypy; \
	#	# workaround for jaraco/skeleton#22
	#	python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	pytest >= 7.4.3  #186
	jaraco.envs>=2.4
	jaraco.path
	jaraco.text
	path
	docutils
	pyfakefs
	more_itertools

docs =
	# upstream
	sphinx >= 3.5
	# workaround for sphinx/sphinx-doc#11662
	sphinx < 7.2.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local

[options.entry_points]
